--- a/docmanagement.html
+++ b/docmanagement.html
@@ -90,12 +90,12 @@ them with the orchestra's account, so you don't have to give everybody access to
 
 <p>Google Drive is free, and it's part of your <a href="./googleaccount.html">Google account</a>.</p>
 
-<p>The RCO has been using Google Drive quite successfully.  Some of our members have trouble using it, but most have 
+<p>The RCO has been using Google Drive reasonably successfully.  Some of our members have had trouble using it, but most have 
 been able to figure it out.  Several years ago, the Dexter Community Orchestra's administration had less success, but 
 technology and people's ability to use it advance quickly.  The technological skill level of your administrators will 
 likely play a role in how you decide to organize your documents, but I definitely recommend using some kind of 
-cloud-based system if you can find a way to make it work.  If you can coax them into learning Google Drive, it will
-serve them well in their own lives, too, no doubt.</p>
+cloud-based system if you can find a way to make it work.  If you can coax them into learning Google Drive, or one of many other online document storage sites, it will
+no doubt server your organization well.  That said, probably what matters more than the technology you pick is the level of commitment and willingness of your board members to figure something out and work with it.</p>
 
 </section><!-- #end content area -->
     
