Remove un-witty typo

--- a/docmanagement.html
+++ b/docmanagement.html
@@ -95,7 +95,7 @@ been able to figure it out.  Several years ago, the Dexter Community Orchestra's
 technology and people's ability to use it advance quickly.  The technological skill level of your administrators will 
 likely play a role in how you decide to organize your documents, but I definitely recommend using some kind of 
 cloud-based system if you can find a way to make it work.  If you can coax them into learning Google Drive, or one of many other online document storage sites, it will
-no doubt server your organization well.  That said, probably what matters more than the technology you pick is the level of commitment and willingness of your board members to figure something out and work with it.</p>
+no doubt serve your organization well.  That said, probably what matters more than the technology you pick is the level of commitment and willingness of your board members to figure something out and work with it.</p>
 
 </section><!-- #end content area -->
     
