--- a/board.html
+++ b/board.html
@@ -139,7 +139,7 @@ great music that our audience enjoys, we are a community orchestra whose main pu
 outlet for our musicians, so we felt that it is our musicians who should be in charge.</p>
 
 <p>You can see the details of the RCO's board structure and officer descriptions in 
-<a href="http://www.redlandscommunityorchestra.org/RCO_Bylaws.pdf" target="_blank" rel="noopener">Articles V and VII of the bylaws</a>.  
+<a href="./RCO_Bylaws.pdf" target="_blank" rel="noopener">Articles V and VII of the bylaws</a>.  
 We might have to change these or expand the board as the organization evolves, but so far this arrangement is working well for us.</p>
 
 </section><!-- #end content area -->
