--- a/bylaws.html
+++ b/bylaws.html
@@ -95,7 +95,7 @@ several people did actually take the time to read them and provide feedback.  Th
 worked fine for us.</p>
 
 <p>You are welcome to use the 
-<a href="http://www.redlandscommunityorchestra.org/RCO_Bylaws.pdf" target="_blank" rel="noopener">RCO bylaws</a> as an 
+<a href="./RCO_Bylaws.pdf" target="_blank" rel="noopener">RCO's original bylaws</a> as an 
 example and to copy and paste as much of the text as you like for your own organization.  
 You might also be interested in viewing the 
 <a href="http://www.dextercommunityorchestra.org/dcobylaws.pdf"  target="_blank" rel="noopener">Dexter Community Orchestra's 
