--- a/nonprofitapplication.html
+++ b/nonprofitapplication.html
@@ -94,7 +94,7 @@ for privacy.</p>
 	<li><a href="./Example_Form1023.pdf" target="_blank" rel="noopener">RCO IRS Form 1023</a> (You will probably be unable to view this
 	document in your browser window. Try downloading it and viewing it with Adobe Reader instead.)</li>
 	<li><a href="./Example_Form1023_Attachments.pdf" target="_blank" rel="noopener">RCO IRS Form 1023 attachments</a></li>
-	<li><a href="http://www.redlandscommunityorchestra.org/RCO_Bylaws.pdf" target="_blank" rel="noopener">RCO bylaws</a></li>
+	<li><a href="./RCO_Bylaws.pdf" target="_blank" rel="noopener">RCO bylaws</a></li>
 </ul>
 
 </section><!-- #end content area -->
