--- a/stateincorporation.html
+++ b/stateincorporation.html
@@ -80,11 +80,13 @@ federal and state <a href="./nonprofit.html">applications for exemption</a> sepa
 <a href="http://www.sos.ca.gov/business-programs/business-entities/forms/" target="_blank" rel="noopener">
 ARTS-PB-501(c)(3) Articles of Incorporation of a Nonprofit Public Benefit Corporation</a> 
 to the California Secretary of State's office and pay a $30 filing fee.  You have to 
-provide a physical address for the corporation; a PO box will not work.  You also have to
+provide a physical address for the corporation; a PO box will not work. Your 
+<a href="https://www.theupsstore.com/mailboxes/business-mailboxes" target="_blank" rel="noopener">local UPS store</a> 
+can provide a mailbox with a physical address, for a fee, if you don't have another option. You also have to
 choose an official name for your corporation, a name which does not currently belong to any
 other incorporated entity in the state or is not overly similar to one.  The name
 you use for incorporation need not be the name you actually use to refer to yourself, but
-it will be the name that appears in any offical records.</p>
+it will be the name that appears in any official records.</p>
 
 <p>It took us the RCO about two months to be granted our state incorporation, but we had one 
 hitch along the way with the official name of our organization and had to re-submit our 
