Add musicianship policy

--- a/musicianship.html
+++ b/musicianship.html
@@ -8,7 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>The Startup Symphony</title>
-<meta name="description" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir, ">
+<meta name="description" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir, auditions, musicianship policy, personnel
+">
 <meta name="keywords" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir">
 
 <!-- Mobile viewport -->
@@ -45,7 +46,7 @@
         	<ul class="srt-menu" id="menu-main-navigation">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./topics.html">Topic index</a></li>
-			<li class="current"><a href="./stepbystep.html">Step-by-step guide</a></li>
+			<li><a href="./stepbystep.html">Step-by-step guide</a></li>
 			<li><a href="./contact.html">Contact</a></li>
 		</ul>     
 		</nav><!-- #topnav -->
@@ -65,42 +66,15 @@
 <!-- content area -->    
 	<section id="content" class="wide-content">
 
-<p>The following is a suggested list of things to do, in order, to start your orchestra.</p>
+<h1>Your musicianship policy</h1>
 
-<ol>
-	<li><a href="./goals.html" target="_blank">Determine your vision and goals</a></li>
-	<li><a href="./conductor.html" target="_blank">Find a conductor</a></li>
-	<li><a href="./space.html" target="_blank">Find rehearsal and performance space</a></li>
-	<li><a href="./website.html" target="_blank">Start a website</a></li>
-	<li><a href="./recruiting.html" target="_blank">Recruit musicians</a></li>
-	<li><a href="./scheduling.html" target="_blank">Schedule rehearsals and concerts</a></li>
-	<li><a href="./sheetmusic.html" target="_blank">Acquire some sheet music</a></li>
-	<li>Start rehearsing!</li>
-	<li><a href="./board.html" target="_blank">Build your orchestra's administrative leadership</a></li>
-	<li><a href="./bankaccount.html" target="_blank">Open a bank account</a></li>
-	<li><a href="./stateincorporation.html" target="_blank">Incorporate as a business at the state level</a></li>
-	<li><a href="./bylaws.html" target="_blank">Write bylaws</a></li>
-	<li><a href="./nonprofit.html" target="_blank">Apply for 501(c)(3) nonprofit status</a></li>
-</ol>
+<p>It's sad but true: it's possible that not everyone who wants to play in your group will have the musical chops to do so.  You might have a beginner who just doesn't have the skill level yet on their instrument to keep up with the music.  You might have an elderly player whose fingers can't move fast enough or who just can't hear well enough to play in tune anymore.  Or you might have someone who just isn't putting in the practice necessary to learn their part.  Amateur-level community group typically are typically pretty forgiving, and even if your goal is to be very inclusive, your group should have a musicianship policy for the unlikely event that one of your players just isn't cutting it.  This will make things much less awkward if the situation does arise.</p>
 
-<p>Many of these steps include substeps, so make sure to read carefully and follow the links.</p>
+<p>Before instituting a musicianship policy, make sure you're clear on your group's <a href="./goals.html">vision and goals</a>, and you should probably also know what your <a href="./auditions.html">audition policy</a> will be.  Your musical expectations for the group will heavily influence your musicianship policy.</p>
 
-<p>Here are some other useful topics to help you as you proceed (check the 
-<a href="./topics.html" target="_blank">Topics Index</a> for a complete list):</p>
+<p>The RCO did not institute a musicianship policy at the beginning and then regretted it later.  It was just something we hadn't thought of until the situation did arise.  If I could go back and do it again, I would have instituted a policy something like this:</p>
 
-<ul>
-	<li><a href="./phone.html" target="_blank">Getting a phone number</a></li>
-	<li><a href="./googleaccount.html" target="_blank">Why your orchestra should have a Google account</a></li>
-	<li><a href="./docmanagement.html" target="_blank">Managing and sharing documents</a></li>
-	<li><a href="./easyfundraising.html" target="_blank">Easy fundraising programs</a></li>
-	<li><a href="./liabilityinsurance.html" target="_blank">Liability insurance</a></li>
-	<li><a href="./licensing.html" target="_blank">Performance licensing</a></li>
-	<li><a href="./attendance.html" target="_blank">Your attendance policy</a></li>
-	<li><a href="./musicianship.html" target="_blank">Your musicianship policy</a></li>
-	<li><a href="./ringers.html" target="_blank">Special players and ringers</a></li>
-	<li><a href="./MSP.html">Be realistic - minimum shippable product</a></li>
-</ul>
-
+<p>"The RCO aims to be as inclusive as possible to musicians of all skill levels and abilities. However, musicians are expected to have a level of musicianship sufficient to meet the demands of the music and to play effectively with others in the group.  If a musician is significantly and consistently struggling to meet the demands of the music, consistently playing wrong notes or egregiously out of tune, or otherwise significantly damaging the musical product, the music director may put this musician on musical probation for a period of [some amount of time].  The music director must explicitly let the musician know that they are on probation, when the probationary period ends, and what specific things must be improved by the end of the probationary period.  If the musician has not made sufficient progress by the end of the probationary period, the music director may ask the musician to leave the group.  The musician may request to audition for the group again after one year, if spots are available."</p>
 </section><!-- #end content area -->
     
 </div><!-- #end div #main .wrapper -->
