--- a/topics.html
+++ b/topics.html
@@ -113,6 +113,7 @@
 			<li><a href="./auditions.html" target="_blank">Auditions and audition policies</a></li>
 			<li><a href="./personnel.html" target="_blank">Personnel management</a></li>
 			<li><a href="./attendance.html" target="_blank">Your attendance policy</a></li>
+			<li><a href="./musicianship.html" target="_blank">Your musicianship policy</a></li>
 			<li><a href="./ringers.html" target="_blank">Special players and ringers</a></li>
 			<li><a href="./MSP.html">Be realistic - minimum shippable product</a></li>
 		</ul>
