--- a/board.html
+++ b/board.html
@@ -142,6 +142,11 @@ outlet for our musicians, so we felt that it is our musicians who should be in c
 <a href="./RCO_Bylaws.pdf" target="_blank" rel="noopener">Articles V and VII of the bylaws</a>.  
 We might have to change these or expand the board as the organization evolves, but so far this arrangement is working well for us.</p>
 
+<h2>Getting rid of board members</h2>
+
+<p>Volunteer board members usually have the best of intentions, but unfortunately, they may not always have the time or desire or skills to do the job they signed up for or got elected for.  I recommend you put an escape clause of some sort in your bylaws to allow you to get rid of ineffective (or destructive!) board members.  Actually, ineffective and destructive can be the same thing if, for example, your treasurer neglects to file your annual IRS and state paperwork and you lose your non-profit status.  Your board should be able to vote to remove a board member who fails to perform the duties of their office or who otherwise causes harm to the organization.</p>
+
+<p>Also, board members should feel free to resign their positions at any time if they themselves realize that they can't or don't want to do the job.  In that situation, it's best for them and for the organization if they resign responsibly.  Add a board member resignation clause to your bylaws.</p>
 </section><!-- #end content area -->
     
 </div><!-- #end div #main .wrapper -->
@@ -150,7 +155,7 @@ We might have to change these or expand the board as the organization evolves, b
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2017 by Melinda Morang
+    	&copy; 2019 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
