--- a/conductor.html
+++ b/conductor.html
@@ -101,12 +101,16 @@ start.  Talk through all your ideas at the very beginning, make compromises wher
 from each other.  You're essentially going to be business partners, and you don't want any unpleasant surprises or 
 misunderdandings later.</p>
 
-<p>Will you pay your conductor?  If so, how much the your conductor want to be paid, and how much can you afford to pay (and 
+<p>Will you pay your conductor?  If so, how much does your conductor want to be paid, and how much can you afford to pay (and 
 where is this money coming from)?  Will you pay your conductor per service (rehearsal or concert), per concert cycle, or per 
 season?  Even if your conductor is volunteering, it's still nice for the orchestra to show its appreciation at the end of the 
 concert or the end of the season in some way.  After its first season, the RCO quietly took a voluntary collection of funds 
 from musicians and purchased a special gift for our much-loved conductor (a high school band and orchestra director), who 
-very graciously volunteers his time and efforts to our group.</p>
+very graciously volunteered his time and efforts to our group for the first few seasons.</p>
+
+<h2>Designate an assistant conductor</h2>
+
+<p>What happens if your conductor gets the flu and has to miss a rehearsal or has a car accident the day before a concert?  It can happen, and your group should be prepared.  You can still rehearse or perform if pretty much anyone else is missing, but you HAVE to have a conductor.  Designate an assistant conductor or at least have in mind a list of substitutes you can call in case of an emergency.</p>
 
 </section><!-- #end content area -->
     
@@ -116,7 +120,7 @@ very graciously volunteers his time and efforts to our group.</p>
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2017 by Melinda Morang
+    	&copy; 2019 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
