--- a/filingrequirements.html
+++ b/filingrequirements.html
@@ -74,6 +74,8 @@ in order to remain in good standing as a corporation, even if you are operating 
 been granted your 501(c)(3) nonprofit status, so if your situation is different, you should check with the 
 IRS and your state government to find out what your filing requirements are.</p>
 
+<p>DO NOT FORGET TO SUBMIT YOUR ANNUAL PAPERWORK. You can lose your non-profit status and get charged substantial fees if you don't stay up to date on your paperwork.</p>
+
 <h2>Federal filing requirements</h2>
 
 <p>Every year (assuming your gross receipts are less than $50,000), you have to file the 
@@ -118,7 +120,7 @@ through the Office of the Attorney General.</p>
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2017 by Melinda Morang
+    	&copy; 2019 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
