--- a/musicianship.html
+++ b/musicianship.html
@@ -68,7 +68,7 @@
 
 <h1>Your musicianship policy</h1>
 
-<p>It's sad but true: it's possible that not everyone who wants to play in your group will have the musical chops to do so.  You might have a beginner who just doesn't have the skill level yet on their instrument to keep up with the music.  You might have an elderly player whose fingers can't move fast enough or who just can't hear well enough to play in tune anymore.  Or you might have someone who just isn't putting in the practice necessary to learn their part.  Amateur-level community group typically are typically pretty forgiving, and even if your goal is to be very inclusive, your group should have a musicianship policy for the unlikely event that one of your players just isn't cutting it.  This will make things much less awkward if the situation does arise.</p>
+<p>It's sad but true: it's possible that not everyone who wants to play in your group will have the musical chops to do so.  You might have a beginner who just doesn't have the skill level yet on their instrument to keep up with the music.  You might have an elderly player whose fingers can't move fast enough or who just can't hear well enough to play in tune anymore.  Or you might have someone who just isn't putting in the practice necessary to learn their part.  Amateur-level community groups are typically pretty forgiving, but even if your goal is to be very inclusive, your group should have a musicianship policy for the unlikely event that one of your players just isn't cutting it.  This will make things much less awkward if the situation does arise.</p>
 
 <p>Before instituting a musicianship policy, make sure you're clear on your group's <a href="./goals.html">vision and goals</a>, and you should probably also know what your <a href="./auditions.html">audition policy</a> will be.  Your musical expectations for the group will heavily influence your musicianship policy.</p>
 
@@ -83,7 +83,7 @@
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2017 by Melinda Morang
+    	&copy; 2019 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
