Add project charter explanation
Recommend to readers that they create a project charter and provide a template.

--- a/projectcharter.html
+++ b/projectcharter.html
@@ -8,7 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>The Startup Symphony</title>
-<meta name="description" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir, ">
+<meta name="description" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir, vision, goals, strategy, project charter, charter, resources, stakeholders
+">
 <meta name="keywords" content="how to start a community (amateur, volunteer, nonprofit, civic) orchestra band, choir">
 
 <!-- Mobile viewport -->
@@ -43,7 +44,7 @@
         <nav id="topnav">
         <div class="menu-toggle">Menu</div>  
         	<ul class="srt-menu" id="menu-main-navigation">
-            <li class="current"><a href="./index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./topics.html">Topic index</a></li>
 			<li><a href="./stepbystep.html">Step-by-step guide</a></li>
 			<li><a href="./contact.html">Contact</a></li>
@@ -54,7 +55,7 @@
  
 <!-- hero area (the grey one with a slider -->
     <section id="page-header" class="clearfix">    
-	<h1>The Startup Symphony</h1>
+	
     </section><!-- end hero area -->
 
 
@@ -64,33 +65,40 @@
 
 <!-- content area -->    
 	<section id="content" class="wide-content">
-<p>Hello!  Welcome to The Startup Symphony.  This website is all about how to start a community orchestra in your town.</p>
 
-<p>A community orchestra is an orchestra designed especially for amateur musicians of all ages to play orchestral music 
-for fun.  Think of a room full of people who have day jobs doing something else rehearsing a Beethoven symphony for the
-sheer joy of playing their instruments with other people, and that's a community orchestra.</p>
+<h1>Create a project charter</h1>
 
-<p>My name is Melinda Morang, and I'm the founder of the 
-<a href="http://www.redlandscommunityorchestra.com">Redlands Community Orchestra</a> 
-in Redlands, CA, USA.  I'm also a past president of the
-<a href="http://www.dextercommunityorchestra.org">Dexter Community Orchestra</a> 
-in Dexter, MI, USA.  The advice I'm giving here is based on my own experience starting and running community orchestras 
-(with some valuable input from those who have joined me in my adventures and some of my readers), and I hope it can be helpful to you if you're
-doing the same thing.</p>
+<p>I took a project management training course at work, and it was mind-blowingly helpful!  There's a lot to
+	the art and science of effective project management, but the most valuable and easy-to-implement activities
+	is creating a project charter.  A project charter helps you to clearly define and communicate what you're
+	trying to do, why, and how, by setting down the following items in writing:	
+</p>
 
-<p>Are you thinking of starting a community band or choir, or just looking to improve the management of an existing 
-community musical group?  There should be some useful information for you here, too.  There is plenty of overlap.</p>
+<ul>
+	<li>Goal</li>
+	<li>Background and justification</li>
+	<li>Deliverables and acceptance criteria</li>
+	<li>Scope and activities</li>
+	<li>Timeline and deadlines</li>
+	<li>Required resources</li>
+	<li>Stakeholders</li>
+	<li>Dependencies and related projects</li>
+</ul>
 
-<p>If you're starting an orchestra from scratch, you should start with the <a href="./stepbystep.html">Step-by-Step guide</a>.  
-If you just want to read about different random orchestra management topics, check out the <a href="./topics.html">Topic Index</a>.
-Oh, and if you're not listening to music while looking at this site, you should stop right now and turn some on!</p>
+<p>Even if you don't use any other project management techniques and have no training in project management, creating
+	a project charter can be an incredibly valuable step to help you think through everything that will be involved in
+	starting your orchestra.  It's also a good way to define must-haves and nice-to-haves while thinking through your
+	<a href="./MSP.html">"minimum shippable product"</a>.  I highly recommend giving this a try after you've figured out
+	your <a href="./goals.html">vision and goals</a>.
+</p>
 
-<p>This site is a work in progress.  I will add more topics as time and inspiration allow.</p>
+<p>A project charter is also super useful in communicating your plan with others: with potential members or volunteers, with
+	potential conductors, with anyone you're trying to get resources from, etc.
+</p>
 
-<p>Disclaimer: All the information on this website is accurate to the best of my knowledge.  I am not accountable for
-any problems your orchestra encounters by following the advice on this website.  That said, if you find a mistake,
-please <a href="./contact.html">let me know</a>.</p>
-
+<p>Feel free to use my
+	<a href="https://docs.google.com/document/d/1M4XaatJuBFeUdJZAC6Liv5Uac_r7aKJYN31mL42Iymc/edit?usp=sharing" target="_blank" rel="noopener">project charter template</a>.
+</p>
 </section><!-- #end content area -->
     
 </div><!-- #end div #main .wrapper -->
