--- a/goals.html
+++ b/goals.html
@@ -81,8 +81,7 @@ to think about:</p>
 	by performing high-quality, engaging concerts?</li>
 	<li>Will you play just the classical warhorses, or do you want to be a pops orchestra, a new music ensemble, a 
 	baroque orchestra?  Or do you want to play a healthy mix of everything?</li>
-	<li>Will your concerts be relatively casual, or do you want them to be formal?  Do you want them to be non-
-	traditional or unusual somehow?</li>
+	<li>Will your concerts be relatively casual, or do you want them to be formal?  Do you want them to be non-traditional or unusual somehow?</li>
 </ul>
 
 <p>Make sure your community can support the type of orchestra you want to form.  Will you be able to attract enough 
@@ -100,7 +99,12 @@ too much (or anything) for tickets.</p>
 commit to working together; you and your conductor need to share the same goals.  (If you are the conductor, find a co-founder
 who can help you with the administrative stuff, and make sure this co-founder shares your goals.)</p>
 
-<p>Both in the beginning and as your organization grows, be realistic.  You'll probably have more good ideas than you can realistically pursue, given limited resources and volunteer manpower.  Be clear on what your <a href="./MSP.html">"minimum shippable product"</a> is.
+<p>Both in the beginning and as your organization grows, be realistic.  You'll probably have more good ideas than you can
+	realistically pursue, given limited resources and volunteer manpower.  Be clear on what your
+	<a href="./MSP.html">"minimum shippable product"</a> is.</p>
+
+<p>Formally write down your vision and goals and the things required to achieve them in your
+	<a href="./projectcharter.html">project charter</a></p>
 
 </section><!-- #end content area -->
     
@@ -110,7 +114,7 @@ who can help you with the administrative stuff, and make sure this co-founder sh
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2019 by Melinda Morang
+    	&copy; 2024 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
