--- a/stepbystep.html
+++ b/stepbystep.html
@@ -69,6 +69,7 @@
 
 <ol>
 	<li><a href="./goals.html" target="_blank">Determine your vision and goals</a></li>
+	<li><a href="./projectcharter.html" target="_blank">Create a project charter</a></li>
 	<li><a href="./conductor.html" target="_blank">Find a conductor</a></li>
 	<li><a href="./space.html" target="_blank">Find rehearsal and performance space</a></li>
 	<li><a href="./website.html" target="_blank">Start a website</a></li>
@@ -109,7 +110,7 @@
 <!-- footer area -->    
 <footer>
 	<div id="colophon" class="wrapper clearfix">
-    	&copy; 2019 by Melinda Morang
+    	&copy; 2024 by Melinda Morang
     </div>
     
 <!--You can NOT remove this attribution statement from any page, unless you get the permission from prowebdesign.ro--><div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Site built with <a href="http://www.prowebdesign.ro/simple-responsive-template/" target="_blank" title="Simple Responsive Template is a free software by www.prowebdesign.ro" style="color:#777;">Simple Responsive Template</a> by <a href="http://www.prowebdesign.ro/" target="_blank" title="www.prowebdesign.ro" style="color:#777;">Prowebdesign.ro</a></div><!--end attribution-->
